# ros-camera-calibration-example

./: CMakeLists.txt  package.xml
nodes/: subscriber.cpp  subscriber.py
scripts/: calibration.py  dataset.py  fake_publisher.py  frame.py  frame_selector.py
