<?xml version="1.0"?>
<package format="2">
  <name>ros_camera_calibration_example</name>
  <version>1.0.0</version>
  <description>Camera calibration examples in ROS</description>

  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <export/>

</package>
